--- a/test/tests.html
+++ b/test/tests.html
@@ -9,6 +9,8 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit/qunit.js"></script>
+  <script src="fakes.js"></script>
+  <script src="../jquery.validate.globalize.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
